# design-publications-scraper

./: .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  config.yaml  deduplicate.py  design_results.csv  docker-compose.yml  main.py  pipeline.py  pyproject.toml  requirements.txt  run.py  search_results.csv  setup.py
.github/workflows/: ci.yml
cli/: README.md  run.py  run_cli.py  test_filtering.py
configs/: config.yaml
coreapi/: app.py
data/processed/: .gitkeep  filtered_results.csv  new_records.csv
data/raw/: base_database.csv  search_results
docs/: CORRECOES_IMPORTS.md  ESTRUTURA_FINAL.md  ESTRUTURA_PROJETO.md  LIMPEZA_ESTRUTURA.md  README_NEW_STRUCTURE.md  SEPARACAO_RESPONSABILIDADES.md  complete_system_summary.md  curation_filtering_guide.md  data_structure_guide.md  deduplication_guide.md  requeriments.txt  transformation_summary.md
examples/: basic_usage.py
logs/: .gitkeep
scrapers/: arcosdesign_scraper.py  humanfactorsindesign_scraper.py  poliedro_scraper.py  repositorioufrn_scraper.py  template_scraper.py  triades_scraper.py
scripts/: install-git-hooks.bat  install-git-hooks.ps1  install-git-hooks.sh  setup-venv.bat  setup-venv.ps1  setup-venv.sh
src/design_scraper/: __init__.py  __main__.py
src/design_scraper/cli/: __init__.py  main.py
src/design_scraper/config/: __init__.py  config.yaml  config_manager.py  defaults.py  manual_search_config.yaml
src/design_scraper/core/: __init__.py  automated_pipeline.py  filter.py  main.py  manual_search.py  pipeline.py  transformer.py
src/design_scraper/processors/: __init__.py
src/design_scraper/scrapers/: __init__.py  arcosdesign_scraper.py  base_scraper.py  designetecnologia_scraper.py  educacaografica_scraper.py  estudosemdesign_scraper.py  humanfactorsindesign_scraper.py  infodesign_scraper.py  template_scraper.py  triades_scraper.py
src/design_scraper/utils/: __init__.py  data_transformer.py  deduplication.py  export_csv.py  html_parsing.py  scrapers_factory.py
tests/: .gitkeep  conftest.py
tests/unit/: test_transformer.py
utils/: content_filter.py  deduplication.py  html_parsing.py  scrapers_factory.py
web/: README.md  run_streamlit.py  streamlit_app.py
